--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -19,25 +19,19 @@
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
-        <EditText
+        <ImageView
             android:id="@+id/editTextTextPassword3"
-            android:layout_width="270dp"
+            android:layout_width="166dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="20dp"
             android:layout_marginTop="1dp"
-            android:background="@drawable/border"
-            android:drawableStart="@drawable/buscar"
-            android:drawablePadding="8dp"
-            android:ems="10"
-            android:hint="Buscar"
-            android:inputType="text"
             android:padding="5dp"
             android:paddingStart="30px"
-            android:textColorHint="#000000" />
+            app:srcCompat="@drawable/kitbyte" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginLeft="160dp"
             android:orientation="vertical">
 
             <ImageButton
