--- a/app/src/main/res/layout/activity_redefinir_senha.xml
+++ b/app/src/main/res/layout/activity_redefinir_senha.xml
@@ -52,6 +52,7 @@
             android:background="@drawable/border"
             android:drawableStart="@drawable/email"
             android:drawablePadding="8dp"
+            android:textColor="@color/black"
             android:ems="20"
             android:hint="E-mail"
             android:inputType="textEmailAddress"
@@ -75,6 +76,7 @@
             android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
+            android:textColor="@color/black"
             android:background="@drawable/border"
             android:drawableStart="@drawable/password"
             android:drawablePadding="8dp"
@@ -94,6 +96,7 @@
             android:drawableStart="@drawable/password"
             android:drawablePadding="8dp"
             android:ems="10"
+            android:textColor="@color/black"
             android:hint="Confirmar senha"
             android:inputType="textPassword"
             android:padding="5dp"
