--- a/app/src/main/res/layout/activity_assinatura.xml
+++ b/app/src/main/res/layout/activity_assinatura.xml
@@ -101,7 +101,7 @@
 
             <Button
                 android:id="@+id/button7"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_gravity="center_horizontal"
@@ -110,7 +110,7 @@
                 android:text="Voltar"
                 android:textAllCaps="false"
                 android:textColor="#FFFFFF"
-                android:textSize="18dp"
+                android:textSize="26dp"
                 app:cornerRadius="50dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -121,9 +121,9 @@
         </LinearLayout>
     </ScrollView>
 
-    <include layout="@layout/menu_foooter"
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+<!--    <include layout="@layout/menu_foooter"-->
+<!--        android:id="@+id/footer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true" />-->
 </RelativeLayout>
