--- a/app/src/main/res/layout/activity_aulas.xml
+++ b/app/src/main/res/layout/activity_aulas.xml
@@ -17,13 +17,13 @@
     <WebView
         android:id="@+id/webAula"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/footer" />
+        android:layout_height="match_parent"/>
+<!--        android:layout_above="@+id/footer" />-->
 
-    <include layout="@layout/menu_foooter"
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+<!--    <include layout="@layout/menu_foooter"-->
+<!--        android:id="@+id/footer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true" />-->
 
 </RelativeLayout>
