--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -9,8 +9,8 @@
     <WebView
         android:id="@+id/webHome"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/footer" />
+        android:layout_height="match_parent"/>
+<!--        android:layout_above="@+id/footer" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -64,10 +64,10 @@
 <!--        android:text="home"-->
 <!--        android:textSize="36sp" />-->
 
-    <include layout="@layout/menu_foooter"
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true" />
+<!--    <include layout="@layout/menu_foooter"-->
+<!--        android:id="@+id/footer"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true" />-->
 
 </RelativeLayout>
