--- a/app/src/main/res/layout/register.xml
+++ b/app/src/main/res/layout/register.xml
@@ -43,6 +43,7 @@
         android:hint="Nome"
         android:inputType="text"
         android:paddingStart="30px"
+        android:textColor="@color/black"
         android:textColorHint="#286BF2" />
 
     <TextView
@@ -68,6 +69,7 @@
         android:hint="Nome de usuário"
         android:inputType="text"
         android:padding="5dp"
+        android:textColor="@color/black"
         android:paddingStart="30px"
         android:textColorHint="#286BF2" />
     <TextView
@@ -91,6 +93,7 @@
         android:drawablePadding="8dp"
         android:ems="10"
         android:hint="E-mail"
+        android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:padding="5dp"
         android:paddingStart="30px"
@@ -111,12 +114,13 @@
         android:id="@+id/editTextTextPassword333"
         android:layout_width="260dp"
         android:layout_height="50dp"
+        android:textColor="@color/black"
         android:layout_gravity="center_horizontal"
         android:background="@drawable/border"
         android:drawableStart="@drawable/calendario"
         android:drawablePadding="8dp"
         android:ems="10"
-        android:hint="DD/MM/YYYY"
+        android:hint="YYYY-MM-DD"
         android:inputType="date"
         android:padding="5dp"
         android:paddingStart="30px"
@@ -145,6 +149,7 @@
         android:hint="Senha"
         android:inputType="textPassword"
         android:padding="5dp"
+        android:textColor="@color/black"
         android:paddingStart="30px"
         android:textColorHint="#286BF2" />
 
@@ -168,6 +173,7 @@
         android:drawableStart="@drawable/password"
         android:drawablePadding="8dp"
         android:ems="10"
+        android:textColor="@color/black"
         android:hint="Confirmar senha"
         android:inputType="textPassword"
         android:padding="5dp"
